Fix chart type buttons misalignment (https://github.com/woocommerce/woocommerce-admin/pull/2871)

--- a/plugins/woocommerce-admin/packages/components/src/chart/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/chart/style.scss
@@ -104,6 +104,7 @@
 	background: transparent !important;
 	&.components-icon-button {
 		color: $core-grey-light-700;
+		display: inline-flex;
 		&.woocommerce-chart__type-button-selected {
 			color: $core-grey-dark-500;
 		}
